Kotlin -> Java, Hilt -> Dagger 2, Kotlin coroutines -> RxJava 2, Kotlin synthetics -> View Binding

--- a/app/src/main/res/layout/fragment_user_profile.xml
+++ b/app/src/main/res/layout/fragment_user_profile.xml
@@ -13,6 +13,7 @@
         android:visibility="gone" />
 
     <include
+        android:id="@+id/errorLayout"
         layout="@layout/error"
         tools:visibility="gone" />
 
