--- a/app/src/main/res/layout/fragment_user_list.xml
+++ b/app/src/main/res/layout/fragment_user_list.xml
@@ -14,6 +14,7 @@
         android:visibility="gone" />
 
     <include
+        android:id="@+id/errorLayout"
         layout="@layout/error"
         tools:visibility="gone" />
 
